default address changed

--- a/docs-setup.html
+++ b/docs-setup.html
@@ -16,7 +16,7 @@
         <form method="GET" action="docs-app.html" class="searchBarContainerForm setupSearchBar">
             <div class="dummyWrapper setupPage">
                 <label class="setupLabel"><strong>Docs Web Services URL:</strong></label>
-                <input type="url" size="50" name="ws-url" value="http://zdu.binghamton.edu:1235" class="searchInput setupInput"/>
+                <input type="url" size="50" name="ws-url" value="http://localhost:1235" class="searchInput setupInput"/>
                 <input class="control searchSubmitButton setupSubmit" type="submit" value="Submit">
             </div>
         </form>
